[package]
name = "whitenoise-solana"
version = "0.1.0"
authors = ["Evanesco-Labs"]
edition = "2018"

[dependencies]
libp2p = { version = "0.36", features = ["tcp-tokio"] }
bs58 = "0.4.0"
tokio = { version = "1.4", features = ["fs", "sync", "time", "macros", "rt-multi-thread", "process", "net", "io-util", "io-std"] }
rusty-leveldb = "0.3.5"
async-trait = "0.1"
rand = "0.8"
prost = "0.7"
multihash = { version = "0.13", default-features = false, features = ["arb"] }
tokio-util = { version = "0.6", features = ["full"] }
log = "0.4"
bytes = "1"
futures = "0.3.1"
env_logger = "0.8.1"
futures-timer = "3"
void = "1"
eth-ecies = { git = "https://github.com/tritone11/rust-eth-ecies", rev = "cb07b9f" }
snow = "0.7.2"
serde_json = "1.0"
serde = { version = "1.0.117", features = ["derive"] }
clap = "2.27.0"
smallvec = "1.6"


[build-dependencies]
prost-build = "0.7"

[lib]

[profile.release]
lto = true
opt-level = 3
codegen-units = 1